# Prompty

./: .env.example  .eslintrc.json  .gitignore  .jscpd.json  .jscpd.rust.json  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/commands/: commands.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-mobile.yml  build-release.yml  keep-alive.yml  quality.yml  supabase-usage.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.3.0-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.3.0-MILESTONE-AUDIT.md  v0.3.0-REQUIREMENTS.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/reviews/: gamification-review.md
docs/: BRAND.md  README.md
docs/data/: data-model.md
docs/design/: design-system.md
docs/features/: beginner-mode.md  feed.md  gamification.md  prompty-template.md
docs/planning/: implementation-roadmap.md  prototype-v1.md  (+1 more)
scripts/: check-supabase-usage.ts  seed-promptys.ts  verify-seed.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
supabase/: config.toml  seed.sql
(+263 files in other folders)
