[package]
name = "app"
version = "0.2.0"
description = "Promptys — Biblioteca visual de prompts prontos para geração de imagens com IA"
authors = ["Rica Soluções <sierra.csi@gmail.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/ricasolucoes/Prompty"
homepage = "https://github.com/ricasolucoes/Prompty"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
